Fix that height is calculated incorrectly when using display:table, box-sizing:border-box and padding. https://bugs.webkit.org/show_bug.cgi?id=196175

Reviewed by Darin Adler.

Currently, box sizing type check is missing, so the height of display:table element's percent height child
is subtracted by its border and padding even when its 'box-sizing' is not 'content-box'.

This patch adds the missing box sizing type check.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-sizing/table-child-percentage-height-with-border-box-expected.html: Added.
* web-platform-tests/css/css-sizing/table-child-percentage-height-with-border-box.html: Added.

Source/WebCore:

Test: imported/w3c/web-platform-tests/css/css-sizing/table-child-percentage-height-with-border-box.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computePercentageLogicalHeight const):

LayoutTests:

* platform/gtk/fast/table/003-expected.txt:
* platform/gtk/tables/mozilla/bugs/bug30692-expected.txt:
* platform/ios/tables/mozilla/bugs/bug30692-expected.txt:
* platform/mac-catalina/tables/mozilla/bugs/bug30692-expected.txt:
* platform/mac-mojave/tables/mozilla/bugs/bug30692-expected.txt:
* platform/mac/fast/table/003-expected.txt:
* platform/mac/tables/mozilla/bugs/bug30692-expected.txt:



Canonical link: https://commits.webkit.org/245258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287063 268f45cc-cd09-0410-ab3c-d52691b4dbfc